src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-latebound-regions.rs
fn foo<'a,'b>(x: &mut Vec<&'a u8>, y: &'b u8) {
    x.push(y); //~ ERROR lifetime mismatch
}

fn main() { }
